<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ActivityPozole">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Seleccionar_Pozole"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/pozole_rojo"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/pozole_verde"
            tools:ignore="ContentDescription" />

        <RadioGroup
            android:id="@+id/radioGroupPozole"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5">

            <RadioButton
                android:id="@+id/radioPozoleRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rojo"
                android:textSize="@dimen/text" />

            <RadioButton
                android:id="@+id/radioPozoleVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Verde"
                android:textSize="@dimen/text" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Tamanio"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPozole" />

        <RadioGroup
            android:id="@+id/radioGroupTamaño"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/radioPozoleChico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chico"
                android:textSize="@dimen/text" />

            <RadioButton
                android:id="@+id/radioPozoleMediano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mediano"
                android:textSize="@dimen/text" />

            <RadioButton
                android:id="@+id/radioPozoleGrande"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Grande"
                android:textSize="@dimen/text" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Ingredientes"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTamaño" />

        <RadioButton
            android:id="@+id/radioRepollo"
            android:layout_width="86dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/Repollo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <RadioButton
            android:id="@+id/radioCebolla"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Cebolla"
            app:layout_constraintStart_toEndOf="@+id/radioRepollo"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <RadioButton
            android:id="@+id/radioMaiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Maiz"
            app:layout_constraintStart_toEndOf="@+id/radioCebolla"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <RadioButton
            android:id="@+id/radioLimon"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Limon"
            app:layout_constraintStart_toEndOf="@+id/radioMaiz"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <RadioButton
            android:id="@+id/radioTostadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Tostadas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioRepollo" />

        <RadioButton
            android:id="@+id/radioOregano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Oregano"
            app:layout_constraintStart_toEndOf="@+id/radioTostadas"
            app:layout_constraintTop_toBottomOf="@+id/radioCebolla" />

        <RadioButton
            android:id="@+id/radioRabano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Rabanos"
            app:layout_constraintStart_toEndOf="@+id/radioOregano"
            app:layout_constraintTop_toBottomOf="@+id/radioMaiz" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="OrdenarPedido"
            android:text="@string/Ordenar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numeroOrdenes" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Cantidad"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioOregano" />

        <EditText
            android:id="@+id/numeroOrdenes"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>





